add control with chats by : in console; removed -1 chain; removed EchoMessage.java and ECHO; added datetime in logs; Chain.toString; chatID in ForwardData and TaulightRequestData; logic for forward moved to its chain; TauHubServerChain.java renamed to GetOnlineServerChain.java; renamed TauOnlineChain to TauOnlineClientChain